--- a/food-ordering-system/pom.xml
+++ b/food-ordering-system/pom.xml
@@ -13,6 +13,8 @@
 
     <modules>
         <module>order-service</module>
+        <module>common</module>
+        <module>common/common-domain</module>
     </modules>
 
     <groupId>com.food.ordering.system</groupId>
@@ -52,6 +54,11 @@
             <dependency>
                 <groupId>com.food.ordering.system</groupId>
                 <artifactId>order-messaging</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.food.ordering.system</groupId>
+                <artifactId>common-domain</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
